Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.11.5 (Unreleased)

    Bugs Fixed

      - LP #360761 (backported from Acquisition trunk): fix iteration proxy
        to pass `self` acquisition-wrapped into `__iter__` and `__getitem__`.

      - LP #414757 (backported from Zope trunk): don't emit a IEndRequestEvent
        when clearing a cloned request.

      - updated to ZODB 3.8.4

  Zope 2.11.4 (2009/08/06)

    Restructuring

      - Moved exception MountedStorageError from ZODB.POSExceptions
        to Products.TemporaryFolder.mount (now its only client).

      - LP #253362:  Moved Zope2-specific module, ZODB/Mount.py, to
        Products/TemporaryFolder/mount.py (its only client is
        Products/TemporaryFolder/TemporaryFolder.py).

      - Removed spurious import-time dependencies from
        Products/ZODBMountPoint/MountedObject.py.

    Bugs Fixed

      - Fixed vulnerabilities in the ZEO network protocol 
        affecting ZEO storage servers.

  Zope 2.11.3 (2009/05/04)

    Features added

      - SiteErrorLog now includes the entry id in the information copied to
        the event log. This allowes you to correlate a user error report with
        the event log after a restart, or let's you find the REQUEST
        information in the SiteErrorLog when looking at a traceback in the
        event log.

    Restructuring

      - Updated to match all new versions from the yet-unreleased Zope 3.4.1
        release (`http://svn.zope.org/zope.release/branches/3.4/
        releases/controlled-packages.cfg?rev=99659`).

      - Updated to include all new versions from the final Zope 3.4.0 release
        (http://download.zope.org/zope3.4/3.4.0/).

      - Added 'InitializeClass' alias in 'App.class_init' to ease migration.
        In Zope 2.12 it will be recommended to import 'InitializeClass' from